@@ -1,5 +1,5 @@
 displayName = N Terraria Utilities
 author = Nakano15
-version = 0.1.3.4
+version = 0.1.3.5
 hideResources = true
 includeSource = false
